[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Sprites.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Enemy/EnemyAI.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Enemys/EnemyHealthSystem.gd" type="Script" id=3]
[ext_resource path="res://Assets/ball.png" type="Texture" id=4]

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 0.221591 ), 0.0, 0.0, 0, 0, Vector2( 0.420792, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5.5, 6.5 )

[sub_resource type="CircleShape2D" id=2]
radius = 262.721

[node name="EnemyShip" type="KinematicBody2D" groups=["Enemy", "Target"]]
scale = Vector2( 1.5, 1.5 )
script = ExtResource( 2 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
modulate = Color( 1, 0.270588, 0.27451, 1 )
position = Vector2( -5.33333, 0 )
rotation = 1.57079
amount = 10
lifetime = 2.0
texture = ExtResource( 4 )
emission_shape = 2
emission_rect_extents = Vector2( 1, 1 )
direction = Vector2( 1, 5 )
angle = 409.5
angle_random = 1.0
scale_amount_curve = SubResource( 3 )
color = Color( 1, 0.270588, 0.27451, 1 )

[node name="Sprites" type="Sprite" parent="."]
position = Vector2( -0.666649, -0.666649 )
rotation = -1.57079
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 16, 16, 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.166649, -0.166649 )
rotation = 1.57079
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="shotPos" type="Position2D" parent="."]
position = Vector2( 11.3333, 0 )

[node name="ShootInterval" type="Timer" parent="."]

[node name="Health" type="Node2D" parent="."]
script = ExtResource( 3 )
health = 100
max_health = 100

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="ShootInterval" to="." method="_on_ShootInterval_timeout"]
